# Ai-agent

./: .gitignore  LICENSE  README.md  SECURITY.md  SUBMISSION.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile
backend/app/: main.py  prompts.py  pyproject.toml  task_manager.py
backend/app/providers/: __init__.py  anthropic_provider.py  base.py  openai_provider.py
backend/app/rephraser_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/app/tests/: test_main.py  test_providers.py  test_streaming.py
backend/tests/: test_api.py  test_task_manager.py
deploy/aws/lightsail/: README.md
frontend/: Dockerfile  jest.config.cjs  nginx.conf  package-lock.json  package.json  tsconfig.jest.json
frontend/src/: App.css  App.tsx  index.css  types.ts
frontend/src/__tests__/: app.test.tsx
frontend/src/components/: Controls.tsx  InputPanel.tsx  ResultCard.tsx  ResultsGrid.tsx  Toast.tsx
frontend/src/hooks/: useRephraser.ts
frontend/src/lib/: api.ts
scripts/: record_demo.sh
