[project]
name = "rephraser-backend"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.29.0",
  "pydantic-settings>=2.2.1",
  "httpx>=0.27.0",
  "anyio>=4.3.0",
  "slowapi>=0.1.9",
  "redis>=5.0.0"
]

[project.optional-dependencies]
test = [
  "pytest>=8.1.1",
  "pytest-asyncio>=0.23.6",
  "fakeredis>=2.21.0",
  "trio>=0.31.0"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
